@@ -181,6 +181,7 @@ NOTE: Someone remove duplication between 0.8.7f and 0.8.8
 -bug#0001403: 'reapply suggested names' doesn't work correctly for graphs and data sources
 -bug#0001504: no newline fix
 -bug#0001568: Cacti currently gives a lot of warnings of deprecated functions on PHP 5.3
+-bug#0001584: Nodes on graph tree are in the wrong places, column order_key has strange values
 -bug#0001626: Cacti does not pass currency symbols ($) used in labels/gprint strings to rrdtool during graph generation.
 -bug#0001632: script server treats quoted arguments with spaces as multiple separate arguments
 -bug#0001660: Modifying data template values is not working as expected.
